Added sh onigiri strats for A6-A9 and AX/AY

--- a/levels/all_lvl/A/A6.md
+++ b/levels/all_lvl/A/A6.md
@@ -44,6 +44,21 @@
 </details>
 
 ---
+## Speedhack double onigiri voltage strat
+
+`Time` **00:14.200** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A6_S_AllOnigirisWithVoltage.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A6_S_AllOnigirisWithVoltage.mp4?raw=true)
+
+  **Notes**
+  - Based on the similarly named non-speedhack strat.
+  - Speedhack should only save a little bit of time at the start.
+  - Speedhack makes it difficult to touch the little walls to regenerate jump and voltage without sprinting upwards and touching a glitch block. Be careful not to hold Up too much.
+</details>
+
+---
 ## Normal onigiri strat
 
 `Time` **00:15.000** `Difficulty` ★★★☆☆
