--- a/levels/all_lvl/A/A7.md
+++ b/levels/all_lvl/A/A7.md
@@ -18,6 +18,16 @@
 </details>
 
 ---
+## Voltage onigiri strat
+
+`Time` **00:15.800** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A7_VoltageOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A7_VoltageOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:18.500** `Difficulty` ★★★☆☆
