--- a/levels/all_lvl/A/A8.md
+++ b/levels/all_lvl/A/A8.md
@@ -17,6 +17,16 @@
 </details>
 
 ---
+## Voltage onigiri strat
+
+`Time` **00:14.500** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A8_VoltageOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A8_VoltageOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:16.700** `Difficulty` ★★★☆☆
