--- a/levels/all_lvl/A/A9.md
+++ b/levels/all_lvl/A/A9.md
@@ -14,6 +14,19 @@
 </details>
 
 ---
+## Voltage onigiri strat
+
+`Time` **00:14.700** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A9_VoltageOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A9_VoltageOnigiri.mp4?raw=true)
+
+  **Notes**
+  - Not that easy to master, but a mistake should rarely end in a death.
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:16.500** `Difficulty` ★★☆☆☆
