--- a/levels/all_lvl/A/A4.md
+++ b/levels/all_lvl/A/A4.md
@@ -34,6 +34,16 @@
 </details>
 
 ---
+## Jailbreak onigiri strat
+
+`Time` **00:12.050** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A4_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/A/A4_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Onigiri strat
 
 `Time` **00:13.100** `Difficulty` ★☆☆☆☆
