Added sh onigiri strats for Power Plants

--- a/levels/all_lvl/pp/PP13.md
+++ b/levels/all_lvl/pp/PP13.md
@@ -27,6 +27,16 @@
 </details>
 
 ---
+## Speedhack onigiri strat
+
+`Time` **00:10.400** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_S_Onigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP13_S_Onigiri.mp4?raw=true)
+</details>
+
+---
 ## SD storage strat
 
 `Time` **00:10.600** `Difficulty` ★★★★★
