--- a/levels/all_lvl/pp/PP14.md
+++ b/levels/all_lvl/pp/PP14.md
@@ -39,9 +39,23 @@
 </details>
 
 ---
+## Speedhack SD storage onigiri strat
+
+`Time` **00:12.300** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_SDSOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_SDSOnigiri.mp4?raw=true)
+
+  **Notes**
+  - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
+  - This strat skips the cutscene where the glitch stops growing.
+</details>
+
+---
 ## SD storage onigiri strat
 
-`Time` **00:12.900** `Difficulty` ★★★☆☆
+`Time` **00:12.800** `Difficulty` ★★★☆☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
@@ -49,8 +63,17 @@
 
   **Notes**
   - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
-  - Note that this skips the cutscene where the glitch stops growing.
-  - This is a pretty lenient SD storage. You can get away with non-optimal dashes, and there is a decent chance you can fallback on the normal strat if you fail.
+  - This strat skips the cutscene where the glitch stops growing.
+</details>
+
+---
+## Speedhack onigiri strat
+
+`Time` **00:16.200** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_Onigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_Onigiri.mp4?raw=true)
 </details>
 
 ---
