--- a/levels/any_ml/pp/PP14.md
+++ b/levels/any_ml/pp/PP14.md
@@ -31,7 +31,7 @@
 ---
 ## SD storage onigiri strat
 
-`Time` **00:12.900** `Difficulty` ★★★☆☆
+`Time` **00:12.800** `Difficulty` ★★★☆☆
 <details>
   <summary>Click to show/hide the strat</summary>
 
@@ -39,8 +39,7 @@
 
   **Notes**
   - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
-  - Note that this skips the cutscene where the glitch stops growing.
-  - This is a pretty lenient SD storage. You can get away with non-optimal dashes, and there is a decent chance you can fallback on the normal strat if you fail.
+  - This strat skips the cutscene where the glitch stops growing.
 </details>
 
 ---
