--- a/levels/all_lvl/pp/PP12.md
+++ b/levels/all_lvl/pp/PP12.md
@@ -31,6 +31,20 @@
 </details>
 
 ---
+## Speedhack onigiri strat
+
+`Time` **00:13.200** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_S_Onigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_S_Onigiri.mp4?raw=true)
+
+  **Notes**
+  - In the vertical battery section, be careful not to dash too quickly, you need to time your dashes properly so you can reach the next battery. It's easy to lose a bunch of time to this section, so don't rush it.
+  - You can also use one or two SD storage dashes in the vertical battery section to reach higher a bit quicker.
+</details>
+
+---
 ## Strat
 
 `Time` **00:13.400** `Difficulty` ★★☆☆☆
