--- a/levels/any_sh/pp/PP11.md
+++ b/levels/any_sh/pp/PP11.md
@@ -11,4 +11,44 @@
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_Strat.mp4?raw=true)
+
+  **Notes**
+  - If you run the All Onigiri category, consider picking up the first one on your way. It takes less than a second. That second matters way more when going for the RF exit later on.
+</details>
+
+---
+## Speedhack first onigiri strat
+
+`Time` **00:07.000** `Difficulty` ★☆☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_LeftOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_LeftOnigiri.mp4?raw=true)
+</details>
+
+---
+## Speedhack RF exit strat
+
+`Time` **00:14.000** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_RfExitStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_RfExitStrat.mp4?raw=true)
+
+  **Notes**
+  - Speedhack is slower here, because have to make sure you're not running up the walls in the labyrinth at the end. If you run up the walls, you won't be able to make it to the other side. It's advised to dash Up-Right at the end of the climb, and then dash Down to accelerate towards the bottom.
+</details>
+
+---
+## Speedhack double onigiri strat
+
+`Time` **00:14.700** `Difficulty` ★★★★★
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_DoubleOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_DoubleOnigiri.mp4?raw=true)
+
+  **Notes**
+  - Really tight. Consider getting the first onigiri when going through Power Plants for the first time, and then getting only the other one when you go for the Random Forest.
+  - Speedhack is significantly harder on this strat, despite not being any faster, because have to make sure you're not running up the walls in the labyrinth at the end. If you run up the walls, you won't be able to make it to the other side. It's advised to dash Up-Right at the end of the climb, and then dash Down to accelerate towards the bottom.
 </details>
