--- a/levels/any_sh/pp/PP12.md
+++ b/levels/any_sh/pp/PP12.md
@@ -16,3 +16,17 @@
   - Don't try to overoptimize - the video shows how it goes when it's really well optimized, but in a real run, it's probably too risky to try and go as fast.
   - You can also use one or two SD storage dashes in the vertical section to reach higher a bit quicker.
 </details>
+
+---
+## Speedhack onigiri strat
+
+`Time` **00:13.200** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_S_Onigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP12_S_Onigiri.mp4?raw=true)
+
+  **Notes**
+  - In the vertical battery section, be careful not to dash too quickly, you need to time your dashes properly so you can reach the next battery. It's easy to lose a bunch of time to this section, so don't rush it.
+  - You can also use one or two SD storage dashes in the vertical battery section to reach higher a bit quicker.
+</details>
