--- a/levels/any_sh/pp/PP14.md
+++ b/levels/any_sh/pp/PP14.md
@@ -12,3 +12,27 @@
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_Strat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_Strat.mp4?raw=true)
 </details>
+
+---
+## Speedhack SD storage onigiri strat
+
+`Time` **00:12.300** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_SDSOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_SDSOnigiri.mp4?raw=true)
+
+  **Notes**
+  - This strat uses SD Storage. You can learn more about it in the "Jump cart techs" section of this guide.
+  - This strat skips the cutscene where the glitch stops growing.
+</details>
+
+---
+## Speedhack onigiri strat
+
+`Time` **00:16.200** `Difficulty` ★★☆☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_Onigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP14_S_Onigiri.mp4?raw=true)
+</details>
