--- a/levels/any_sh/FW/FW10.md
+++ b/levels/any_sh/FW/FW10.md
@@ -6,13 +6,26 @@
 
 ## Tight strat
 
-`Time` **00:20.700** `Difficulty` ★★★★☆
+`Time` **00:19.400** `Difficulty` ★★★★☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/FW/FW10_TightStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/FW/FW10_TightStrat.mp4?raw=true)
 
   **Notes**
-  - Definitely use the D-Pad for this one, at least if you want to take the shortcut with the onigiri.
+  - Definitely use the D-Pad for this one, especially for the shortcut with the onigiri.
   - If you're not really consistent with the tight shortcuts, you should really go for a safer strat, as dying in that last section would waste a lot of time.
+</details>
+
+---
+## Safer strat
+
+`Time` **00:22.000** `Difficulty` ★★★☆☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/FW/FW10_SafeStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/FW/FW10_SafeStrat.mp4?raw=true)
+
+  **Notes**
+  - Either the D-Pad or the stick should work well for this one.
 </details>
