Added sh strats for jailbreak onigiris

--- a/levels/all_lvl/C/C1.md
+++ b/levels/all_lvl/C/C1.md
@@ -4,10 +4,20 @@
 
 [< Back (C0)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C0.md) | [Next (C2) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C2.md)
 
+## Speedhack jailbreak onigiri strat
+
+`Time` **00:06.700** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_S_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_S_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Risky cloud skip strat
 
 `Time` **00:06.900** `Difficulty` ★★★★☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_RiskySkip.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C1_RiskySkip.mp4?raw=true)
