--- a/levels/all_lvl/T/T2.md
+++ b/levels/all_lvl/T/T2.md
@@ -17,6 +17,19 @@
 </details>
 
 ---
+## Speedhack jailbreak onigiri strat
+
+`Time` **00:10.700** `Difficulty` ★★★★☆
+<details>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T2_S_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/T/T2_S_JailbreakOnigiri.mp4?raw=true)
+
+  **Notes**
+  - The squeeze near the end, in the vertical section with the crumbling platforms, is pretty tight. You have to detach seemingly the moment you start running on the non-glitch wall block, otherwise you're going to collide either with the wall block or the crumbling block.
+</details>
+
+---
 ## Jailbreak onigiri strat
 
 `Time` **00:11.900** `Difficulty` ★★★☆☆
