--- a/levels/all_lvl/C/C7.md
+++ b/levels/all_lvl/C/C7.md
@@ -4,10 +4,20 @@
 
 [< Back (C6)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/C6.md) | [Next (MrSuihanki) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/C/MrSuihanki.md)
 
+## Speedhack jailbreak onigiri strat
+
+`Time` **00:08.400** `Difficulty` ★★☆☆☆
+<details open>
+  <summary>Click to show/hide the strat</summary>
+
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C7_S_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C7_S_JailbreakOnigiri.mp4?raw=true)
+</details>
+
+---
 ## Jailbreak onigiri strat
 
 `Time` **00:08.700** `Difficulty` ★☆☆☆☆
-<details open>
+<details>
   <summary>Click to show/hide the strat</summary>
 
   [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C7_JailbreakOnigiri.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/C/C7_JailbreakOnigiri.mp4?raw=true)
