--- a/levels/arb_sh/pp/PP11'.md
+++ b/levels/arb_sh/pp/PP11'.md
@@ -4,11 +4,14 @@
 
 [< Back (P3')](https://github.com/Doublevil/scbspeedrun/blob/main/levels/arb_sh/P/P3'.md) | [Next (RF0) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/arb_sh/RF/RF0.md)
 
-## Voltage RF exit strat
+## Speedhack RF exit strat
 
-`Time` **00:13.500** `Difficulty` ★★★☆☆
+`Time` **00:14.000** `Difficulty` ★★★★☆
 <details open>
   <summary>Click to show/hide the strat</summary>
 
-  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_VoltageRfExit.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_VoltageRfExit.mp4?raw=true)
+  [![Strat animation](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_RfExitStrat.webp)](https://github.com/Doublevil/scbspeedrun/blob/main/media/levels/pp/PP11_S_RfExitStrat.mp4?raw=true)
+
+  **Notes**
+  - Speedhack is slower here, because have to make sure you're not running up the walls in the labyrinth at the end. If you run up the walls, you won't be able to make it to the other side. It's advised to dash Up-Right at the end of the climb, and then dash Down to accelerate towards the bottom.
 </details>
