New LCD13 strats and Tesla skip

--- a/levels/all_lvl/pp/PP14.md
+++ b/levels/all_lvl/pp/PP14.md
@@ -2,7 +2,7 @@
 
 # All strats > Power Plants > PP14
 
-[< Back (PP13)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/PP13.md) | [Next (TheTesslaCoil) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/TheTesslaCoil.md)
+[< Back (PP13)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/PP13.md) | [Next (TheTeslaCoil) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/all_lvl/pp/TheTeslaCoil.md)
 
 ## Speedhack strat
 
