--- a/levels/any_sh/pp/PP14.md
+++ b/levels/any_sh/pp/PP14.md
@@ -2,7 +2,7 @@
 
 # Any% Speedhack > Power Plants > PP14
 
-[< Back (PP13)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_sh/pp/PP13.md) | [Next (TheTesslaCoil) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_sh/pp/TheTesslaCoil.md)
+[< Back (PP13)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_sh/pp/PP13.md) | [Next (TheTeslaCoil) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/any_sh/pp/TheTeslaCoil.md)
 
 ## Speedhack strat
 
