--- a/levels/arb_sh/pp/PP14.md
+++ b/levels/arb_sh/pp/PP14.md
@@ -2,7 +2,7 @@
 
 # All Onigiris Speedhack > Power Plants > PP14
 
-[< Back (PP13)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/arb_sh/pp/PP13.md) | [Next (TheTesslaCoil) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/arb_sh/pp/TheTesslaCoil.md)
+[< Back (PP13)](https://github.com/Doublevil/scbspeedrun/blob/main/levels/arb_sh/pp/PP13.md) | [Next (TheTeslaCoil) >](https://github.com/Doublevil/scbspeedrun/blob/main/levels/arb_sh/pp/TheTeslaCoil.md)
 
 ## Speedhack SD storage onigiri strat
 
